--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,8 +4,33 @@
   <%= devise_error_messages! %>
 
   <div class="field">
+    <%= f.label :first_name %>First name:<br />
+    <%= f.text_field :first_name, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name %>Last name:<br />
+    <%= f.text_field :last_name %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email %>
+  </div>
+
+  <div class="field">
+    <%= f.label :gender_id %>Gender:<br />
+    <%= f.collection_select( :gender_id, Gender.all, :id, :name ) %>
+  </div>
+
+  <div class="field">
+    <%= f.label :age_range_id %>Age:<br />
+    <%= f.collection_select( :age_range_id, AgeRange.all, :id, :name ) %>
+  </div>
+
+  <div class="field">
+    <%= f.label :country %>Home country:<br />
+    <%= f.country_select :country %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -32,7 +57,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update my profile" %>
   </div>
 <% end %>
 
