--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,69 +1,31 @@
-<h2>Edit your profile <%= resource_name.to_s.humanize %></h2>
+<h2>Edit your profile, <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :welcomed, true %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= f.error_notification %>
+  <%= f.input :welcomed, as: :hidden, input_html: { value: true } %>
 
-  <div class="field">
-    <%= f.label :first_name %>First name:<br />
-    <%= f.text_field :first_name, autofocus: true %>
-  </div>
+  <div class="form-inputs">
+    <%= f.input :email, required: true, autofocus: true %>
 
-  <div class="field">
-    <%= f.label :last_name %>Last name:<br />
-    <%= f.text_field :last_name %>
-  </div>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
-
-  <div class="field">
-    <%= f.label :gender_id %>Gender:<br />
-    <%= f.collection_select( :gender_id, Gender.all, :id, :name ) %>
-  </div>
-
-  <div class="field">
-    <%= f.label :age_range_id %>Age:<br />
-    <%= f.collection_select( :age_range_id, AgeRange.all, :id, :name ) %>
-  </div>
-
-  <div class="field">
-    <%= f.label :country %>Home country:<br />
+    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
+    <%= f.input :password_confirmation, required: false %>
+    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <%= f.association :gender %>
+    <%= f.association :age_range %>
     <%= f.country_select :country %>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update my profile" %>
+  <div class="form-actions">
+    <%= f.button :submit, "Update my profile!" %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
