--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,55 +1,21 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :welcomed, true %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= f.error_notification %>
+  <%= f.input :welcomed, as: :hidden, input_html: { value: true } %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+  <div class="form-inputs">
+    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+    <%= f.input :password_confirmation, required: true %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :first_name %>First name:<br />
-    <%= f.text_field :first_name, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %>Last name:<br />
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :gender_id %>Gender:<br />
-    <%= f.collection_select( :gender_id, Gender.all, :id, :name ) %>
-  </div>
-
-  <div class="field">
-    <%= f.label :age_range_id %>Age:<br />
-    <%= f.collection_select( :age_range_id, AgeRange.all, :id, :name ) %>
-  </div>
-
-  <div class="field">
-    <%= f.label :country %>Home country:<br />
+    <%= f.association :gender %>
+    <%= f.association :age_range %>
     <%= f.country_select :country %>
   </div>
 
-
-  <div class="actions">
-    <%= f.submit "Create my profile" %>
+  <div class="form-actions">
+    <%= f.button :submit, "Create my profile!" %>
   </div>
 <% end %>
 
