--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,12 +2,12 @@
 <p>Hello <%= @first_name %>,
 <% if @waiting_installments.any? %>
   <% if @waiting_installments.count == 1 %>
-    You've got one assessment at the moment.
+    You've got one project at the moment.
   <% else %>
-    You've got <%= @waiting_installments.count %> asseessments today.
+    You've got <%= @waiting_installments.count %> projects today.
   <% end %>
 <% else %>
-  You do not currently have any assessments. Check back later or contact your instructor.
+  You do not currently have any projects. Check back later or contact your instructor.
 <% end %></p>
 
 <% if @waiting_installments.any? %>
@@ -22,22 +22,22 @@
      </tr>
      <% @waiting_installments.each do |cai| %>
         <% group = cai[ 0 ] %>
-        <% weekly = cai[ 1 ] %>
+        <% installment = cai[ 1 ] %>
         <tr>
         <td>
-          <% if(weekly.is_completed_by_user @current_user) %>
-            <%= link_to weekly.assessment.name, edit_report_path( :weekly_id=> weekly.id, :group_id => group.id ) %>
+          <% if(installment.is_completed_by_user @current_user) %>
+            <%= link_to installment.project.name, edit_report_path( :installment_id => installment, :group_id => group ) %>
             <br>(<em>completed</em>)
           <% else %>
-            <%= link_to weekly.assessment.name, new_report_path( :weekly_id=> weekly.id, :group_id => group.id ) %>
+            <%= link_to installment.project.name, new_report_path( :installment_id => installment, :group_id => group ) %>
           <% end %>
         </td>
         <td> <%= group.name %></td>
-        <td> <%= group.project.course.name %></td>
-        <td> <%= weekly.start_date %> </td>
-        <td> <%= weekly.end_date %> </td>
+        <td> <%= installment.project.course.name %></td>
+        <td> <%= installment.start_date %> </td>
+        <td> <%= installment.end_date %> </td>
         <td>
-          <%= render :partial => "shared/consent", :locals => { :assessment => weekly.assessment } %>
+          <%= render :partial => "shared/consent", :locals => { :project => installment.project } %>
         </td>
       </tr>
     <% end %>
