--- a/app/views/installments/new.html.erb
+++ b/app/views/installments/new.html.erb
@@ -25,7 +25,7 @@ when the totals equal 600.</p>
 
 <%= form_for @installment, :url => url_params do |f| %>
   <%= f.hidden_field :inst_date %>
-  <%= f.hidden_field :id %>
+  <%= f.hidden_field :assessment_id %>
   <%= f.hidden_field :user_id %>
   <%= f.hidden_field :group_id %>
   <table>
