More progress on timezones

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,6 +17,7 @@
     <%= f.association :gender %>
     <%= f.association :age_range %>
     <%= f.country_select :country %>
+    <%= f.time_zone_select :timezone %>
   </div>
 
   <div class="form-actions">
