--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,7 @@
     <%= f.association :gender %>
     <%= f.association :age_range %>
     <%= f.country_select :country %>
+    <%= f.time_zone_select :timezone %>
   </div>
 
   <div class="form-actions">
