--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,8 +34,8 @@
         </td>
         <td> <%= group.name %></td>
         <td> <%= assessment.project.course.name %></td>
-        <td> <%= assessment.start_date.in_time_zone( @current_user.timezone ).to_date %> </td>
-        <td> <%= assessment.end_date.in_time_zone( @current_user.timezone ).to_date %> </td>
+        <td> <%= assessment.start_date.in_time_zone( @current_user.timezone ).to_date.to_formatted_s(:rfc822) %> </td>
+        <td> <%= assessment.end_date.in_time_zone( @current_user.timezone ).to_date.to_formatted_s(:rfc822) %> </td>
         <td>
           <%= render :partial => "shared/consent", :locals => { :project => assessment.project } %>
         </td>
