--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SAPA</title>
+  <title>CoLab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
