--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,11 +46,11 @@
                   task.name
                 </td>
                 <td> n/a </td>
-                <td> <%= task.project.course.name %></td>
+                <td> <%= task.course.name %></td>
                 <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td>
-                  <%= render :partial => "shared/consent", :locals => { :project => task.project } %>
+                  N/A
                 </td>
               </tr>
          <% end %>
