--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
                   <% end %>
                 </td>
                 <td> <%= group.name %></td>
-                <td> <%= task.project.course.name %></td>
+                <td> <%= task.project.course.name + "(" + task.project.course.get_roster_for_user( @current_user ).role.name + ")"%></td>
                 <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td>
@@ -46,7 +46,7 @@
                   task.name
                 </td>
                 <td> n/a </td>
-                <td> <%= task.course.name %></td>
+                <td> <%= task.course.name + "(" + task.course.get_roster_for_user( @current_user ).role.name + ")"%></td>
                 <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td>
