--- a/app/views/experiences/next.html.erb
+++ b/app/views/experiences/next.html.erb
@@ -1,2 +1,52 @@
-<h1>Experiences#next</h1>
-<p>Find me in app/views/experiences/next.html.erb</p>
+<div style="display: none" id="s_id"><%= @week.narrative.scenario_id %></div>
+<div style="display: none" id="w_num"><%= @week.week_num %></div>
+<div class="ui-corner-all custom-corners">
+  <div class="ui-bar ui-bar-a">
+    <h3>Journal entry</h3>
+  </div>
+  <div class="ui-body ui-body-a">
+<%= @week.text.html_safe %>
+  </div>
+</div>
+
+<br>
+<hr>
+<%= form_for @instructor_response, :url => { :controller => "survey", :action => "showPrompt" }, :method => :get do |f| %>
+
+  <%= f.hidden_field( :week_id ) %>
+
+  <% if flash[:error] && flash[:error].size > 0 && flash[:error][ :behavior_id ] %>
+    <p class='error'><%= flash[:error][ :behavior_id ][ 0 ] %></p>
+  <% end %>
+  <div class="ui-corner-all custom-corners">
+    <div class="ui-bar ui-bar-a">
+      <h3>Which behavior best characterizes this group now?</h3>
+    </div>
+    <div class="ui-body ui-body-a">
+      <% Behavior.all.each do |b| %>
+        <%= f.radio_button :behavior_id, b.id, { 'data-theme'=>'b' } %>
+        <%= f.label :behavior_id, b.name, value: b.id %>
+        <p><%= b.description.html_safe %></p>
+      <% end %>
+
+      <% if flash[:error] && flash[:error].size > 0 && flash[:error][ :other_name] %>
+        <div id="other_name_panel">
+        <p class='error'><%= flash[:error][ :other_name ][ 0 ] %></p>
+      <% else %>
+        <div style="display: none" id="other_name_panel">
+      <% end %>
+          <%= f.label :other_name, "What behavior did you see?" %>
+          <%= f.text_field :other_name %><br>
+        </div>
+    </div>
+  </div>
+
+  <div data-role="collapsible">
+    <h3><%= f.label :comment, "Click here if you have additional comments for us regarding this narrative." %></h3>
+    <%= f.text_area :comment, size: "24x6" %>
+  </div>
+  <br><br>
+
+  <%= f.submit "Save and continue" %>
+  
+<% end %>
