--- a/app/views/experiences/studyInstructions.html.erb
+++ b/app/views/experiences/studyInstructions.html.erb
@@ -1,6 +1,6 @@
 <div class="ui-corner-all custom-corners">
   <div class="ui-bar ui-bar-a">
-    <h3>Instructions for completing this study</h3>
+    <h3>Instructions for completing this experience</h3>
   </div>
   <div class="ui-body ui-body-a">
     <%= render "shared/instructions" %>
