--- a/app/views/admin/experiences/edit.html.erb
+++ b/app/views/admin/experiences/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin::Experiences#edit</h1>
-<p>Find me in app/views/admin/experiences/edit.html.erb</p>
+<h1>Editing Experience</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', @experience %> |
+<%= link_to 'Back', admin_experiences_path %>
