--- a/app/views/admin/experiences/new.html.erb
+++ b/app/views/admin/experiences/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Admin::Experiences#new</h1>
-<p>Find me in app/views/admin/experiences/new.html.erb</p>
+<h1>New Experience</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', admin_experiences_path %>
