--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin::Projects#edit</h1>
-<p>Find me in app/views/admin/projects/edit.html.erb</p>
+<h1>Editing Project</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', @project %> |
+<%= link_to 'Back', admin_projects_path %>
