--- a/app/views/admin/projects/new.html.erb
+++ b/app/views/admin/projects/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Admin::Projects#new</h1>
-<p>Find me in app/views/admin/projects/new.html.erb</p>
+<h1>New Project</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', admin_projects_path %>
