--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,15 +1,15 @@
-<%= simple_form_for(@course) do |f| %>
+<%= simple_form_for @course,  
+    url: admin_course_path( @course ) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.association :user %>
     <%= f.input :name %>
     <%= f.input :number %>
     <%= f.association :school %>
     <%= f.time_zone_select :timezone %>
     <%= f.input :start_date, as: :date, html5: true %>
     <%= f.input :end_date, as: :date, html5: true %>
-    <%= f.text :description %>
+    <%= f.input :description, as: :text %>
   </div>
   <h2>Course instructors</h2>
   <% @course.rosters.students.each do |roster| %>
