--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Courses#edit</h1>
-<p>Find me in app/views/courses/edit.html.erb</p>
+<h1>Editing Course</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', admin_courses_url( @course ) %> |
+<%= link_to 'Back', admin_courses_path %>
