--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Courses#new</h1>
-<p>Find me in app/views/courses/new.html.erb</p>
+<h1>New Course</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', admin_courses_path %>
