--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -1,4 +1,5 @@
-<%= simple_form_for(@experience) do |f| %>
+<%= simple_form_for @experience,
+    url: admin_experience_path( @experience ) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
