--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,5 @@
-<%= simple_form_for(@project) do |f| %>
+<%= simple_form_for @project,
+    url: admin_project_path( @project ) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
