Routing is working - hidden fields are not

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -20,12 +20,6 @@
   <%= @course.start_date %>
 </p>
 <p>
-  <strong>Course instructors</strong>
-  <% @course.rosters.students.each do |roster| %>
-    <%= roster.user.name %> (<%= roster.role.name %><br>
-  <% end %>
-</p>
-<p>
   <strong>Student roster</strong>
   <% @course.rosters.instructorships.each do |roster| %>
     <%= roster.user.name %><br>
@@ -33,7 +27,20 @@
 
 </p>
 <p>
+  <strong>Course instructors</strong>
+  <%= form_tag admin_add_students_path, method: :get do %>
+    <%= label_tag :addresses, "Add users by email:" %>
+    <%= text_field_tag :addresses %>
+    <%= hidden_field :id, @course.id %>
+    <%= submit_tag "Add!" %>
+  <% end %>
+  <% @course.rosters.students.each do |roster| %>
+    <%= roster.user.name %> (<%= roster.role.name %><br>
+  <% end %>
+</p>
+<p>
   <strong>Projects</strong>
+  <%= link_to "Add Project", new_admin_project_path( :course_id => @course.id )%>
   <% @course.projects.each do |project| %>
     <%= project.name %></br>
   <% end %>
@@ -41,6 +48,7 @@
 </p>
 <p>
   <strong>Experiences</strong>
+  <%= link_to "Add Experience", new_admin_experience_path( :course_id => @course.id )%>
   <% if @course.experiences.count > 0 %>
     <table>
       <tr>
