--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', admin_courses_url( @course ) %> |
-<%= link_to 'Back', admin_courses_path %>
+<%= link_to 'Show', courses_url( @course ) %> |
+<%= link_to 'Back', courses_path %>
